Sort out `README` things *at the right level of abstraction*.
- But, of course, it's generated!

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -9,4 +9,4 @@ run: markdown
 markdown: $(MARKDOWN)
 
 $(MARKDOWN): $(INPUT) $(PROCESSING)
-	$(MOTMOT) -file $(PROCESSING) -exp 'run-markdown ()' -prefix Markdown
+	$(MOTMOT) -file $(PROCESSING) -exp 'Notes.Processing.run ()' -prefix Markdown
